--- a/JOB_PORTAL/JOB_PORTAL/JOB_PORTAL.csproj
+++ b/JOB_PORTAL/JOB_PORTAL/JOB_PORTAL.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="efpt.config.json.user" />
+  </ItemGroup>
+
 </Project>
